--- a/tracer-sofa-boot-starter/src/test/resources/application-zipkin.properties
+++ b/tracer-sofa-boot-starter/src/test/resources/application-zipkin.properties
@@ -20,4 +20,4 @@ com.alipay.sofa.tracer.springmvc.jsonOutput=false
 # enable zipkin
 com.alipay.sofa.tracer.zipkin.enabled=true
 # zipkin url
-com.alipay.sofa.tracer.zipkin.baseUrl=http://zipkin-cloud-3.inc.alipay.net:9411
+com.alipay.sofa.tracer.zipkin.baseUrl=http://zipkin-server.mock.com:9411
