--- a/tracer-samples/tracer-sample-with-zipkin/src/main/resources/application.properties
+++ b/tracer-samples/tracer-sample-with-zipkin/src/main/resources/application.properties
@@ -22,4 +22,4 @@ logging.path=./logs
 # enable zipkin
 com.alipay.sofa.tracer.zipkin.enabled=true
 # zipkin server url
-com.alipay.sofa.tracer.zipkin.baseUrl=http://zipkin-cloud-3.inc.host.net:9411
+com.alipay.sofa.tracer.zipkin.baseUrl=http://zipkin-cloud.host.net:9411
