--- a/tracer-all/pom.xml
+++ b/tracer-all/pom.xml
@@ -9,7 +9,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>sofatracer-all</artifactId>
+    <artifactId>tracer-all</artifactId>
     <version>2.1.2</version>
     <packaging>jar</packaging>
 
