--- a/tracer-all/pom.xml
+++ b/tracer-all/pom.xml
@@ -1,14 +1,19 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-    <modelVersion>4.0.0</modelVersion>
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
         <artifactId>tracer-all-parent</artifactId>
         <groupId>com.alipay.sofa</groupId>
         <version>2.1.2</version>
-        <relativePath>../../pom.xml</relativePath>
     </parent>
+    <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>sofa-tracer-springmvc-plugin</artifactId>
+    <artifactId>tracer-all</artifactId>
+    <version>2.1.2</version>
+    <packaging>jar</packaging>
+
+    <name>SOFATracer in one without SOFABoot starter</name>
 
     <dependencies>
         <dependency>
@@ -19,11 +24,9 @@
             <groupId>com.alipay.sofa</groupId>
             <artifactId>tracer-extensions</artifactId>
         </dependency>
-        <!-- use servlet api -->
         <dependency>
-            <groupId>javax.servlet</groupId>
-            <artifactId>javax.servlet-api</artifactId>
-            <optional>true</optional>
+            <groupId>com.alipay.sofa</groupId>
+            <artifactId>sofa-tracer-springmvc-plugin</artifactId>
         </dependency>
     </dependencies>
 
