Change Class SofaTracerSpan's startTime/endTime to microsecond precision

--- a/tracer-samples/tracer-sample-with-zipkin/src/main/resources/application.properties
+++ b/tracer-samples/tracer-sample-with-zipkin/src/main/resources/application.properties
@@ -22,4 +22,4 @@ logging.path=./logs
 # enable zipkin
 com.alipay.sofa.tracer.zipkin.enabled=true
 # zipkin server url
-com.alipay.sofa.tracer.zipkin.baseUrl=http://zipkin-cloud.host.net:9411
+com.alipay.sofa.tracer.zipkin.baseUrl=http://127.0.0.1:9411
