--- a/pom.xml
+++ b/pom.xml
@@ -140,6 +140,12 @@
                 <version>4.5.3</version>
                 <scope>provided</scope>
             </dependency>
+            <dependency>
+                <groupId>org.apache.httpcomponents</groupId>
+                <artifactId>httpasyncclient</artifactId>
+                <version>4.1.3</version>
+                <scope>provided</scope>
+            </dependency>
             <!-- test 依赖 -->
             <dependency>
                 <groupId>org.jmockit</groupId>
