--- a/tracer-samples/tracer-sample-with-zipkin/pom.xml
+++ b/tracer-samples/tracer-sample-with-zipkin/pom.xml
@@ -23,14 +23,14 @@
         </dependency>
         <!-- zipkin client -->
         <dependency>
-            <groupId>io.zipkin.java</groupId>
+            <groupId>io.zipkin.zipkin2</groupId>
             <artifactId>zipkin</artifactId>
-            <version>1.19.2</version>
+            <version>2.11.1</version>
         </dependency>
         <dependency>
-            <groupId>io.zipkin.reporter</groupId>
+            <groupId>io.zipkin.reporter2</groupId>
             <artifactId>zipkin-reporter</artifactId>
-            <version>0.6.12</version>
+            <version>2.7.7</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
