--- a/tracer-sofa-boot-starter/pom.xml
+++ b/tracer-sofa-boot-starter/pom.xml
@@ -55,15 +55,15 @@
 
         <!-- zipkin optional : add manually -->
         <dependency>
-            <groupId>io.zipkin.java</groupId>
+            <groupId>io.zipkin.zipkin2</groupId>
             <artifactId>zipkin</artifactId>
-            <version>1.19.2</version>
+            <version>2.11.1</version>
             <optional>true</optional>
         </dependency>
         <dependency>
-            <groupId>io.zipkin.reporter</groupId>
+            <groupId>io.zipkin.reporter2</groupId>
             <artifactId>zipkin-reporter</artifactId>
-            <version>0.6.12</version>
+            <version>2.7.7</version>
             <optional>true</optional>
         </dependency>
         <!-- test -->
