--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
     </parent>
 
     <artifactId>tracer-all-parent</artifactId>
-    <version>2.1.2-SNAPSHOT</version>
+    <version>2.1.3-SANPSHOT</version>
     <packaging>pom</packaging>
 
     <name>tracer-all-parent</name>
@@ -30,7 +30,7 @@
 
     <properties>
         <opentracing.version>0.22.0</opentracing.version>
-        <sofa.tracer.version>2.1.2-SNAPSHOT</sofa.tracer.version>
+        <sofa.tracer.version>2.1.3-SANPSHOT</sofa.tracer.version>
         <java.compiler.source.version>1.6</java.compiler.source.version>
         <java.compiler.target.version>1.6</java.compiler.target.version>
         <jmh.version>1.9.3</jmh.version>
