--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>com.alipay.sofa</groupId>
         <artifactId>sofaboot-dependencies</artifactId>
-        <version>2.4.0</version>
+        <version>2.4.6-SNAPSHOT</version>
     </parent>
 
     <artifactId>tracer-all-parent</artifactId>
@@ -26,6 +26,7 @@
         <module>tracer-test/logback-test</module>
         <module>tracer-test/log4j2-test</module>
         <module>tracer-test/log4j-test</module>
+        <module>tracer-sofa-boot-plugin</module>
     </modules>
 
     <properties>
