--- a/tracer-sofa-boot-starter/pom.xml
+++ b/tracer-sofa-boot-starter/pom.xml
@@ -52,18 +52,31 @@
             <artifactId>spring-boot-configuration-processor</artifactId>
             <optional>true</optional>
         </dependency>
+        <!--httpclient-->
+        <dependency>
+            <groupId>org.apache.httpcomponents</groupId>
+            <artifactId>httpclient</artifactId>
+            <version>4.5.3</version>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.httpcomponents</groupId>
+            <artifactId>httpasyncclient</artifactId>
+            <version>4.1.3</version>
+            <scope>provided</scope>
+        </dependency>
 
         <!-- zipkin optional : add manually -->
         <dependency>
-            <groupId>io.zipkin.java</groupId>
+            <groupId>io.zipkin.zipkin2</groupId>
             <artifactId>zipkin</artifactId>
-            <version>1.19.2</version>
+            <version>2.11.1</version>
             <optional>true</optional>
         </dependency>
         <dependency>
-            <groupId>io.zipkin.reporter</groupId>
+            <groupId>io.zipkin.reporter2</groupId>
             <artifactId>zipkin-reporter</artifactId>
-            <version>0.6.12</version>
+            <version>2.7.7</version>
             <optional>true</optional>
         </dependency>
         <!-- test -->
@@ -82,13 +95,5 @@
             <artifactId>fastjson</artifactId>
             <scope>test</scope>
         </dependency>
-        <!-- zipkin -->
-        <dependency>
-            <groupId>io.zipkin.java</groupId>
-            <artifactId>zipkin-junit</artifactId>
-            <version>1.19.2</version>
-            <scope>test</scope>
-        </dependency>
     </dependencies>
-
 </project>
