--- a/tracer-core/pom.xml
+++ b/tracer-core/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <artifactId>tracer-all-parent</artifactId>
         <groupId>com.alipay.sofa</groupId>
-        <version>2.1.3-SANPSHOT</version>
+        <version>2.1.3</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
 
