--- a/tracer-samples/tracer-sample-with-h2/pom.xml
+++ b/tracer-samples/tracer-sample-with-h2/pom.xml
@@ -11,6 +11,10 @@
 
     <artifactId>sofa-tracer-sample-with-h2</artifactId>
 
+    <properties>
+        <main.user.dir>${project.basedir}/../..</main.user.dir>
+    </properties>
+
     <dependencies>
         <dependency>
             <groupId>com.alipay.sofa</groupId>
@@ -33,6 +37,20 @@
             <groupId>com.h2database</groupId>
             <artifactId>h2</artifactId>
             <scope>runtime</scope>
+        </dependency>
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.alipay.sofa</groupId>
+            <artifactId>sofa-tracer-datasource-plugin</artifactId>
+            <version>2.2.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>druid</artifactId>
+            <version>1.0.12</version>
         </dependency>
     </dependencies>
 
