--- a/tracer-samples/tracer-sample-with-h2/src/main/resources/application.properties
+++ b/tracer-samples/tracer-sample-with-h2/src/main/resources/application.properties
@@ -29,6 +29,6 @@ spring.h2.console.settings.web-allow-others=true
 
 spring.datasource.username=sofa
 spring.datasource.password=123456
-spring.datasource.url=jdbc:h2:meme:test
+spring.datasource.url=jdbc:h2:~/test
 spring.datasource.driver-class-name=org.h2.Driver
 
