--- a/tracer-test/log4j-test/pom.xml
+++ b/tracer-test/log4j-test/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <artifactId>tracer-all-parent</artifactId>
         <groupId>com.alipay.sofa</groupId>
-        <version>2.1.4-SNAPSHOT</version>
+        <version>2.1.4</version>
         <relativePath>../../pom.xml</relativePath>
     </parent>
 
@@ -15,7 +15,7 @@
         <dependency>
             <groupId>com.alipay.sofa</groupId>
             <artifactId>tracer-extensions</artifactId>
-            <version>2.1.4-SNAPSHOT</version>
+            <version>2.1.4</version>
         </dependency>
 
         <dependency>
