--- a/tracer-test/logback-test/pom.xml
+++ b/tracer-test/logback-test/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <artifactId>tracer-all-parent</artifactId>
         <groupId>com.alipay.sofa</groupId>
-        <version>2.1.4-SNAPSHOT</version>
+        <version>2.1.4</version>
         <relativePath>../../pom.xml</relativePath>
     </parent>
 
