--- a/pom.xml
+++ b/pom.xml
@@ -97,6 +97,11 @@
             </dependency>
             <dependency>
                 <groupId>com.alipay.sofa</groupId>
+                <artifactId>sofa-tracer-datasource-plugin</artifactId>
+                <version>${sofa.tracer.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.alipay.sofa</groupId>
                 <artifactId>tracer-all</artifactId>
                 <version>${sofa.tracer.version}</version>
             </dependency>
