auto support druid/c3p0/tomcat/dbcp/hikari

--- a/tracer-sofa-boot-starter/src/test/resources/application-tracer.properties
+++ b/tracer-sofa-boot-starter/src/test/resources/application-tracer.properties
@@ -30,3 +30,5 @@ com.alipay.sofa.tracer.tracerGlobalLogReserveDay=8
 com.alipay.sofa.tracer.statLogInterval=70
 com.alipay.sofa.tracer.baggageMaxLength=2048
 
+spring.application.name=test-app-name
+
