--- a/sofa-tracer-plugins/sofa-tracer-zipkin-plugin/pom.xml
+++ b/sofa-tracer-plugins/sofa-tracer-zipkin-plugin/pom.xml
@@ -6,37 +6,32 @@
         <artifactId>tracer-all-parent</artifactId>
         <groupId>com.alipay.sofa</groupId>
         <version>2.2.0-SNAPSHOT</version>
-        <relativePath>../pom.xml</relativePath>
+        <relativePath>../../pom.xml</relativePath>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>tracer-sofa-zipkin-plugin</artifactId>
+    <artifactId>sofa-tracer-zipkin-plugin</artifactId>
     <dependencies>
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-beans</artifactId>
             <version>4.3.4.RELEASE</version>
-            <scope>compile</scope>
         </dependency>
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-web</artifactId>
             <version>4.3.4.RELEASE</version>
-            <scope>compile</scope>
         </dependency>
-
         <!-- zipkin optional : add manually -->
         <dependency>
             <groupId>io.zipkin.zipkin2</groupId>
             <artifactId>zipkin</artifactId>
             <version>2.11.3</version>
-            <optional>true</optional>
         </dependency>
         <dependency>
             <groupId>io.zipkin.reporter2</groupId>
             <artifactId>zipkin-reporter</artifactId>
             <version>2.7.7</version>
-            <optional>true</optional>
         </dependency>
         <dependency>
             <groupId>com.alipay.sofa</groupId>
@@ -47,21 +42,11 @@
             <artifactId>tracer-extensions</artifactId>
         </dependency>
         <dependency>
-            <groupId>com.alipay.sofa</groupId>
-            <artifactId>sofa-tracer-springmvc-plugin</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>com.alipay.sofa</groupId>
-            <artifactId>sofa-tracer-httpclient-plugin</artifactId>
-        </dependency>
-        <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-context</artifactId>
             <version>4.3.4.RELEASE</version>
-            <scope>compile</scope>
         </dependency>
 
     </dependencies>
-
 
 </project>
