Add SOFATracer Demo with HttpClient Sync and Async Usage

--- a/tracer-samples/tracer-sample-with-httpclient/pom.xml
+++ b/tracer-samples/tracer-sample-with-httpclient/pom.xml
@@ -11,6 +11,10 @@
 
     <artifactId>tracer-sample-with-httpclient</artifactId>
 
+    <properties>
+        <main.user.dir>${project.basedir}/../..</main.user.dir>
+    </properties>
+
     <dependencies>
         <dependency>
             <groupId>org.springframework.boot</groupId>
