--- a/tracer-samples/tracer-sample-with-h2/src/main/resources/application.properties
+++ b/tracer-samples/tracer-sample-with-h2/src/main/resources/application.properties
@@ -15,5 +15,20 @@
 # limitations under the License.
 #
 
-logging.path1=./logs
-spring.application.name=test-app-name
+# Application Name
+spring.application.name=SOFATracerDataSource
+# logging path
+logging.path=./logs
+
+# h2 web consloe 路径
+spring.h2.console.path=/h2-console
+# 开启 h2 web consloe，默认为 false
+spring.h2.console.enabled=true
+#允许远程访问 h2 web consloe
+spring.h2.console.settings.web-allow-others=true
+
+spring.datasource.username=sofa
+spring.datasource.password=123456
+spring.datasource.url=jdbc:h2:~/test
+spring.datasource.driver-class-name=org.h2.Driver
+
