--- a/tracer-samples/tracer-sample-with-springmvc/src/main/resources/application.properties
+++ b/tracer-samples/tracer-sample-with-springmvc/src/main/resources/application.properties
@@ -19,3 +19,6 @@
 spring.application.name=SOFATracerSpringMVC
 # logging path
 logging.path=./logs
+
+com.alipay.sofa.tracer.samplerPercentage=1
+com.alipay.sofa.tracer.samplerName=PercentageBasedSampler
