fix tracer log config

--- a/tracer-sofa-boot-starter/src/test/resources/application-config.properties
+++ b/tracer-sofa-boot-starter/src/test/resources/application-config.properties
@@ -6,3 +6,4 @@ com.alipay.sofa.tracer.tracerGlobalRollingPolicy='.'yyyy-MM-dd_HH
 com.alipay.sofa.tracer.tracerGlobalLogReserveDay=1
 com.alipay.sofa.tracer.statLogInterval=1
 com.alipay.sofa.tracer.baggageMaxLength=1
+logging.path=./logs
