rename zipkin's base package name to com.alipay.sofa.tracer.plugins.zipkin

--- a/tracer-samples/pom.xml
+++ b/tracer-samples/pom.xml
@@ -19,6 +19,7 @@
         <module>tracer-sample-with-sofarpc</module>
         <module>tracer-sample-with-httpclient</module>
         <module>tracer-sample-with-h2</module>
+        <module>tracer-sample-with-sampler</module>
     </modules>
 
     <properties>
