--- a/tracer-samples/tracer-sample-with-zipkin/src/main/resources/application.properties
+++ b/tracer-samples/tracer-sample-with-zipkin/src/main/resources/application.properties
@@ -20,4 +20,4 @@ spring.application.name=SOFATracerReportZipkin
 # logging path
 logging.path=./logs
 # zipkin server url
-com.alipay.sofa.tracer.zipkin.baseUrl=http://zipkin-cloud.host.net:9411
+com.alipay.sofa.tracer.zipkin.baseUrl=http://localhost:9411
