--- a/tracer-samples/tracer-sample-with-sofarpc/pom.xml
+++ b/tracer-samples/tracer-sample-with-sofarpc/pom.xml
@@ -24,6 +24,17 @@
         <dependency>
             <groupId>com.alipay.sofa</groupId>
             <artifactId>rpc-sofa-boot-starter</artifactId>
+            <exclusions>
+                <exclusion>
+                    <artifactId>dubbo</artifactId>
+                    <groupId>com.alibaba</groupId>
+                </exclusion>
+            </exclusions>
+        </dependency>
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>dubbo</artifactId>
+            <version>2.6.0</version>
         </dependency>
         <dependency>
             <groupId>com.alipay.sofa</groupId>
