--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,6 @@
     <artifactId>tracer-all-parent</artifactId>
     <version>3.0.3-SNAPSHOT</version>
     <packaging>pom</packaging>
-
     <name>tracer-all-parent</name>
     <description>Alipay SOFATracer Log Implemented by OpenTracing</description>
 
@@ -69,6 +68,12 @@
         <developer>
             <name>Geng Zhang</name>
             <email>zhanggeng.zg@antfin.com</email>
+            <organization>Ant Financial</organization>
+            <organizationUrl>https://www.alipay.com/</organizationUrl>
+        </developer>
+        <developer>
+            <name>GuoLei Song</name>
+            <email>guolei.sgl@antfin.com</email>
             <organization>Ant Financial</organization>
             <organizationUrl>https://www.alipay.com/</organizationUrl>
         </developer>
