--- a/tracer-samples/tracer-sample-with-slf4j/pom.xml
+++ b/tracer-samples/tracer-sample-with-slf4j/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>com.alipay.sofa</groupId>
         <artifactId>sofa-tracer-samples</artifactId>
-        <version>3.0.3</version>
+        <version>3.0.4-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
