--- a/sofa-tracer-plugins/sofa-tracer-springcloud-plugin/pom.xml
+++ b/sofa-tracer-plugins/sofa-tracer-springcloud-plugin/pom.xml
@@ -16,6 +16,7 @@
         <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-openfeign</artifactId>
+            <version>2.1.0.RELEASE</version>
         </dependency>
         <dependency>
             <groupId>com.alipay.sofa</groupId>
