--- a/tracer-sofa-boot-starter/pom.xml
+++ b/tracer-sofa-boot-starter/pom.xml
@@ -12,8 +12,8 @@
     <artifactId>tracer-sofa-boot-starter</artifactId>
 
     <properties>
-        <java.compiler.source.version>1.7</java.compiler.source.version>
-        <java.compiler.target.version>1.7</java.compiler.target.version>
+        <java.compiler.source.version>1.8</java.compiler.source.version>
+        <java.compiler.target.version>1.8</java.compiler.target.version>
     </properties>
 
     <dependencies>
@@ -36,6 +36,14 @@
         <dependency>
             <groupId>com.alipay.sofa</groupId>
             <artifactId>sofa-tracer-datasource-plugin</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.alipay.sofa</groupId>
+            <artifactId>sofa-tracer-spring-cloud-plugin</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.alipay.sofa</groupId>
+            <artifactId>sofa-tracer-dubbo-plugin</artifactId>
         </dependency>
         <dependency>
             <groupId>com.alipay.sofa</groupId>
