--- a/pom.xml
+++ b/pom.xml
@@ -222,9 +222,13 @@
                 <version>${jmh.version}</version>
                 <scope>test</scope>
             </dependency>
+            <dependency>
+                <groupId>com.alibaba</groupId>
+                <artifactId>fastjson</artifactId>
+                <version>1.2.51</version>
+            </dependency>
         </dependencies>
     </dependencyManagement>
-
     <build>
         <resources>
             <resource>
