--- a/tracer-samples/tracer-sample-with-springmvc/src/main/resources/application.properties
+++ b/tracer-samples/tracer-sample-with-springmvc/src/main/resources/application.properties
@@ -20,6 +20,5 @@ spring.application.name=SOFATracerSpringMVC
 # logging path
 logging.path=./logs
 
-com.alipay.sofa.tracer.samplerPercentage=20
-com.alipay.sofa.tracer.samplerName=PercentageBasedSampler
-#com.alipay.sofa.tracer.samplerCustomRuleClassName=com.alipay.sofa.tracer.examples.springmvc.sampler.CustomOpenRulesSamplerRuler
+#com.alipay.sofa.tracer.samplerPercentage=100
+#com.alipay.sofa.tracer.samplerName=PercentageBasedSampler
