--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,7 @@
         <module>sofa-tracer-plugins/sofa-tracer-zipkin-plugin</module>
         <module>sofa-tracer-plugins/sofa-tracer-dubbo-plugin</module>
         <module>sofa-tracer-plugins/sofa-tracer-spring-cloud-plugin</module>
+        <module>sofa-tracer-plugins/sofa-tracer-resttmplate-plugin</module>
         <module>tracer-all</module>
         <module>tracer-sofa-boot-starter</module>
         <module>tracer-samples</module>
@@ -102,6 +103,11 @@
             <dependency>
                 <groupId>com.alipay.sofa</groupId>
                 <artifactId>sofa-tracer-httpclient-plugin</artifactId>
+                <version>${sofa.tracer.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.alipay.sofa</groupId>
+                <artifactId>sofa-tracer-resttmplate-plugin</artifactId>
                 <version>${sofa.tracer.version}</version>
             </dependency>
             <dependency>
