--- a/tracer-samples/pom.xml
+++ b/tracer-samples/pom.xml
@@ -22,6 +22,7 @@
         <module>tracer-sample-with-sampler</module>
         <module>tracer-sample-with-dubbo</module>
         <module>tracer-sample-with-openfeign</module>
+        <module>tracer-sample-with-resttemplate</module>
     </modules>
 
     <properties>
