dubbo 2.6.x plugin init code

--- a/pom.xml
+++ b/pom.xml
@@ -31,6 +31,7 @@
         <module>tracer-test/logback-test</module>
         <module>tracer-test/log4j2-test</module>
         <module>tracer-test/log4j-test</module>
+        <module>sofa-tracer-plugins/sofa-tracer-dubbo-2.6.x-plugin</module>
     </modules>
 
     <properties>
