support xstringbuild log format

--- a/tracer-samples/tracer-sample-with-httpclient/src/main/resources/application.properties
+++ b/tracer-samples/tracer-sample-with-httpclient/src/main/resources/application.properties
@@ -2,6 +2,9 @@
 spring.application.name=HttpClientDemo
 # logging path
 logging.path=./logs
+server.port=8080
 
-com.alipay.sofa.tracer.samplerPercentage=0
+com.alipay.sofa.tracer.samplerPercentage=100
 com.alipay.sofa.tracer.samplerName=PercentageBasedSampler
+
+spring.profiles.active=non-json
